style.css
body {
	font-family: "Public Sans", sans-serif;
	background-color: #fefefe;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.container {
	text-align: center;
	padding: 20px;
	max-width: 800px;
	display: flex;
	align-items: center;
	flex-direction: column;
}

h1 {
	color: #333;
	font-size: 35px;
	margin-top: 0;
}

p {
	color: #444;
	font-size: 24px;
	font-family: "Lora", serif;
}

small {
	color: grey;
	margin-top: 15px;
	display: block;
}

